--- a/app/views/rooms/_form.html.erb
+++ b/app/views/rooms/_form.html.erb
@@ -31,6 +31,10 @@
         </div>
 
         <div class="form-group">
+          <%= f.label :price_per_night, "Número de Huéspedes" %>
+          <%= f.number_field :price_per_night, class: 'form-control input-lg' %>
+        </div>
+        <div class="form-group">
           <%= f.text_field :image_url, class: 'form-control input-lg', placeholder: "URL de Imagen" %>
         </div>
 
